# holy-guacamole

./: .gitignore  JOURNAL.md  LICENSE.md  README.md  bom.csv  cern_ohl_s_v2.txt
cad/: body.step  lid.step  toothie.dxf
docs/: braindump.md  firmware.md  script.md  spec.md
docs/video/: .gitignore  README.md  package.json  render.sh  tsconfig.json  vite.config.ts
docs/video/src/: lib.tsx  project.ts  theme.ts  vite-env.d.ts
docs/video/src/beats/: centrifugal.tsx  drift.tsx  gForce.tsx  gyroRedline.tsx  integration.tsx  intro.tsx  measurements.tsx  problem.tsx  sensorShove.tsx  solution.tsx  translation.tsx
docs/video/src/components/: MeltyRobot.tsx
docs/video/src/scenes/: main.tsx
firmware/: .gitignore  CMakeLists.txt  flake.nix
firmware/chanmon/: CMakeLists.txt  main.c
firmware/docs/: IDEAS.md
firmware/include/: hw_pins.h  imu_packet.h  rc_map.h
firmware/motortest/: CMakeLists.txt  main.c
firmware/passthrough/: CMakeLists.txt  README.md  main.c  tusb_config.h  usb_descriptors.c
firmware/sim/: CMakeLists.txt  drive.c  hid_dump.c  imu_synth.c  imu_synth.h  pad_test.c  plant.c  plant.h  robot_sim.c  robot_sim.h  zorro_detect.c  zorro_input.c  zorro_input.h  zorro_mapper.c
firmware/sketches/basestation/: README.md  basestation.ino
firmware/sketches/esp-rssi/: README.md  autocorr.h  esp-rssi.ino  rssi_heading.h
firmware/src/: main.c
firmware/src/app/: control_loop.c  control_loop.h
firmware/src/control/: drift.c  drift.h  pid.c  pid.h
firmware/src/crsf/: crsf.c  crsf.h
firmware/src/dshot/: dshot.c  dshot.h  dshot_bidir_600.pio
firmware/src/estimation/: accel_cal.c  accel_cal.h  autocorr.c  edge_pll.c  edge_pll.h  ekf.c  ekf.h  heading_estimate.h  imu_convert.c  imu_convert.h  imu_geom.c  imu_geom.h  meas_model.c  meas_model.h  rssi_heading.c  rssi_interp.c  rssi_interp.h
firmware/src/imu/: imu_spi.c  imu_spi.h  latch.c  latch.h
firmware/src/led/: head_led.c  head_led.h
firmware/src/math/: linalg.c  linalg.h
firmware/src/safety/: battery.c  battery.h  rc_health.c  rc_health.h  watchdog.c  watchdog.h
firmware/src/sensor/: rssi_uart.c  rssi_uart.h  sensor_dispatch.h  sensor_imu_ekf.c  sensor_rssi.c  sensor_source.h
firmware/tests/: CMakeLists.txt  test_accel_cal.c  test_assert.h  test_drift.c  test_ekf.c  test_linalg.c  test_rssi_pipeline.c  test_scenarios.c  test_sim_convergence.c
hardware/: .gitignore  __init__.py  circuit.kicad_pcb  circuit.kicad_prl  circuit.kicad_pro  circuit.kicad_sch  circuit.py  fp-lib-table  guac.kicad_pcb  guac.kicad_pro  guac.kicad_sch  project.toml  sym-lib-table
hardware/libs/: Connector_Generic.kicad_sym  Device.kicad_sym  Library.kicad_sym
hardware/libs/3DModels/: XIAO RP2350_.step
hardware/libs/Device.pretty/: TSSOP-16_L5.0-W4.4-P0.65-LS6.4-BL.kicad_mod
hardware/libs/Library.pretty/: BetaFPV_ELRS_Lite.kicad_mod  DHVQFN-16_L3.5-W2.5-P0.50-BL-EP.kicad_mod  LED-SMD_6P-L2.0-W2.0-P0.80-TL.kicad_mod  LGA-14_L3.0-W2.5-P0.50-TL.kicad_mod  LGA-16_L3.0-W3.0-P0.50-BL.kicad_mod  OSHW_COPPER_10MM.kicad_mod  QFN40P700X700X90-57N-S320.kicad_mod  QFN40P700X700X90-61N-S340.kicad_mod  SC-70-5_L2.0-W1.3-P0.65-LS2.1-BL.kicad_mod  SO-16_L9.9-W3.9-P1.27-LS6.0-BL.kicad_mod  SOIC127P600X175-16N.kicad_mod  SOT-23-5_L2.9-W1.6-P0.95-LS2.8-BR.kicad_mod  SOT-23-5_L3.0-W1.6-P0.95-LS2.8-BR.kicad_mod  SOT-23-5_L3.0-W1.7-P0.95-LS2.8-BR.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BR.kicad_mod  SOT-23_L2.9-W1.3-P1.90-LS2.4-BR.kicad_mod  SSOP-28_L10.2-W5.3-P0.65-LS7.8-BL.kicad_mod  TSOT-23-6_L2.9-W1.6-P0.95-LS2.8-BL.kicad_mod  TSOT-26_L2.9-W1.6-P0.95-LS2.8-BL.kicad_mod  TSSOP-16_L5.0-W4.4-P0.65-LS6.4-BL.kicad_mod  TVSOP-16_L3.6-W4.4-P0.40-LS6.4-BL.kicad_mod  VQFN-16_L4.0-W3.5-P0.50-BL-EP_RGY.kicad_mod  WLBGA-63_L4.8-W2.8-P0.40-BL_CYW43438KUBGT.kicad_mod  XIAO-RP2350-SMD.kicad_mod
hardware/procurement/: digikey_upload_3boards.csv  mouser_user_confirmed_3boards.csv
hardware/schm/: imu_array.kicad_sch  power.kicad_sch  status_led.kicad_sch  status_leds.kicad_sch
